--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".MovieDetailsActivity" />
+        
+        <provider
+            android:authorities="com.slackar.popularmovies"
+            android:name=".utils.FavoritesContentProvider"
+            android:exported="false"/>
     </application>
 
 </manifest>
