--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity">
+        <activity android:name="com.github.andarb.popularmovies.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MovieDetailsActivity" />
+        <activity android:name="com.github.andarb.popularmovies.MovieDetailsActivity" />
         
         <provider
             android:authorities="com.slackar.popularmovies"
-            android:name=".utils.FavoritesContentProvider"
+            android:name="com.github.andarb.popularmovies.utils.FavoritesContentProvider"
             android:exported="false"/>
     </application>
 
