--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.slackar.popularmovies">
+    package="com.github.andarb.popularmovies">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -32,7 +32,7 @@
         </activity>
         
         <provider
-            android:authorities="com.slackar.popularmovies"
+            android:authorities="com.github.andarb.popularmovies"
             android:name="com.github.andarb.popularmovies.utils.FavoritesContentProvider"
             android:exported="false"/>
     </application>
