--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 *.iml
 .gradle
 /local.properties
-.idea
+/.idea/workspace.xml
+/.idea/misc.xml
+/.idea/libraries
+/.idea/caches
 .DS_Store
 /build
 /captures
