--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/misc.xml
 /.idea/libraries
-/.idea/caches
+/.idea/modules.xml
+/.idea/misc.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
+/.idea/caches/build_file_checksums.ser
 .DS_Store
 /build
 /captures
 .externalNativeBuild
-/gradle.properties
-/app/*.iml
